# html-text-color

./: README.md  create_colored.py  pyproject.toml  test.py
html_text_color/: __init__.py  create_colored.py  test.py  util.py
test_outputs/: test_multiple.html  test_single.html  test_tokens.html
